package by.training.nc.sd3.security;

import org.springframework.stereotype.Component;

@Component
public class JwtAuthenticationEntryPoint {
}
