@startuml

title __SECURITY's Class Diagram__\n

  namespace by.training.nc.sd3 {
    namespace security {
      class by.training.nc.sd3.security.JwtAuthenticationEntryPoint {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace security {
      class by.training.nc.sd3.security.JwtAuthenticationFilter {
          - userDetailsService : UserDetailsService
          # doFilterInternal()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace security {
      class by.training.nc.sd3.security.SecurityJwtConstants {
          {static} + ACCESS_TOKEN_VALIDITY_SECONDS : long
          {static} + AUTHORITIES_KEY : String
          {static} + HEADER_STRING : String
          {static} + SIGNING_KEY : String
          {static} + TOKEN_PREFIX : String
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace security {
      class by.training.nc.sd3.security.TokenProvider {
          + generateToken()
          + getAuthentication()
          + getExpirationDateFromToken()
          + getUsernameFromToken()
          + validateToken()
          - getAllClaimsFromToken()
          - getClaimFromToken()
          - isTokenExpired()
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace security {
      class by.training.nc.sd3.security.WebSecurityConfig {
          + authenticationManagerBean()
          + authenticationTokenFilterBean()
          + configure()
          + encoder()
          + globalUserDetails()
      }
    }
  }
  

  by.training.nc.sd3.security.JwtAuthenticationFilter -up-|> org.springframework.web.filter.OncePerRequestFilter
  by.training.nc.sd3.security.JwtAuthenticationFilter o-- by.training.nc.sd3.security.TokenProvider : tokenProvider
  by.training.nc.sd3.security.TokenProvider .up.|> java.io.Serializable
  by.training.nc.sd3.security.WebSecurityConfig -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  by.training.nc.sd3.security.WebSecurityConfig o-- by.training.nc.sd3.service.UserAccountDataService : userAccountDataService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
